[project]
name = "githud"
version = "0.1.0"
description = "Bare-bones terminal UI for push/pull/commit across scattered repos"
requires-python = ">=3.10"
dependencies = [
    "textual>=0.58.0",
]

[project.scripts]
gg = "githud.app:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["githud*"]
